Sidebar Completed, Working on Mobile Nav Styling and last few Auth Issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,6 +107,9 @@
   .h5 {
     @apply text-[16px] leading-[24px] font-semibold;
   }
+  .h6 {
+    @apply text-[14px] leading-[24px] font-medium;
+  }
   .subtitle-1 {
     @apply text-[16px] leading-[24px] font-medium;
   }
@@ -123,6 +126,9 @@
     @apply text-[14px] leading-[20px] font-medium;
   }
   .caption {
+    @apply text-[14px] leading-[24px] font-normal;
+  }
+  .caption-2 {
     @apply text-[12px] leading-[16px] font-normal;
   }
   .overline {
@@ -425,7 +431,7 @@
     @apply flex text-light-100 gap-4 rounded-xl lg:w-full justify-center lg:justify-start items-center h5 lg:px-[30px] h-[52px] lg:rounded-full !important;
   }
   .sidebar-user-info {
-    @apply mt-4 flex items-center justify-center gap-2 rounded-full bg-brand/10 p-1 text-light-100 lg:justify-start lg:p-3 !important;
+    @apply mt-5 p-2 flex items-center justify-center gap-3.5 rounded-full text-light-100 lg:justify-start !important;
   }
   .sidebar-user-avatar {
     @apply aspect-square w-10 rounded-full object-cover !important;
